@@ -24,8 +24,8 @@
 
 package hudson.util;
 
-import java.io.UnsupportedEncodingException;
 import java.net.URLDecoder;
+import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.HashMap;
@@ -57,16 +57,12 @@ public class QueryParameterMap {
      */
     public QueryParameterMap(String queryString) {
         if (queryString == null || queryString.length() == 0)   return;
-        try {
-            for (String param : queryString.split("&")) {
-                String[] kv = param.split("=");
-                String key = URLDecoder.decode(kv[0], "UTF-8");
-                String value = URLDecoder.decode(kv[1], "UTF-8");
-                List<String> values = store.computeIfAbsent(key, k -> new ArrayList<>());
-                values.add(value);
-            }
-        } catch (UnsupportedEncodingException e) {
-            throw new AssertionError(e);
+        for (String param : queryString.split("&")) {
+            String[] kv = param.split("=");
+            String key = URLDecoder.decode(kv[0], StandardCharsets.UTF_8);
+            String value = URLDecoder.decode(kv[1], StandardCharsets.UTF_8);
+            List<String> values = store.computeIfAbsent(key, k -> new ArrayList<>());
+            values.add(value);
         }
     }
 
